# llm-agent

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
api/: __init__.py  endpoints.py
core/: builder.py  deployer.py  generator.py  reviser.py  verifier.py
documentation/: DOCUMENTATION.md  TASK-CHECKLIST.md  TESTING.md  struct.txt
models/: __init__.py  request_models.py
sample-llm-output/: aipipe_raw_response.json  gemini_raw_response.json
services/: __init__.py  github_service.py  llm_service.py
templates/prompts/: base_prompt.txt  readme_prompt.txt  refactor_prompt.txt  webapp_prompt.txt
tests/: __init__.py  test_api.py  test_attachment_func.py  test_gemini.py  test_prepare_attachment.py  test_services.py
tmp_test_attachments/: example.txt
utils/: __init__.py  attachment.py  config.py  json_parser.py  logger.py
